Update UI for mobile - Adjusted padding in AudioPlayerComponents to improve mobile responsiveness - Modified dimensions and styling in MusicCard to optimize display on mobile devices - Increased z-index value in DropDownMenu to prevent overlapping with other elements - Added z-index value in MobileNavbar to ensure it appears above other elements - Added new components and modified styling in MobileNavbar to accommodate playlist creation functionality - Adjusted z-index value in index.css to avoid overlap with other elements - Made styling changes in Category page to improve mobile responsiveness - Made styling changes in Home/Main page to improve mobile responsiveness - Made styling changes in SearchMusic page to improve mobile responsiveness - Made styling changes in UploadFile page to improve mobile responsiveness

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -89,7 +89,7 @@ html {
   position: absolute;
   bottom: 5px;
   right: 5px;
-  z-index: 999;
+  z-index: 997;
 }
 
 .playing__bar {
